# poetry-trial

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  trial_fbprophet.py
.github/workflows/: main.yml  pytest.yml
docker/python/: Dockerfile
tests/: test_fbprophet.py
