[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["ueki-sassor <ueki@sassor.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pystan = "2.19.1.1"
fbprophet = "^0.7.1"
plotly = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
